--- a/public/css/default.css
+++ b/public/css/default.css
@@ -56,6 +56,7 @@ span.label_field {
     font-weight: bold;
     line-height: 1.6;
     vertical-align: baseline;
+    text-align:left;
     border-radius: .35em;
 }
 
