--- a/public/css/default.css
+++ b/public/css/default.css
@@ -14,6 +14,10 @@
 table.jury {
 	table-layout: auto;	
 }
+
+table.jury >th, td{
+	padding:1px 4px;	
+}
 acronym[title] {
     text-decoration: none; 
     border-bottom: 2px dotted grey;
